# workflowpy

./: .gitignore  README.md  pyproject.toml
example/: copy_to_clip.py  example.py  run_example.py
workflowpy/: __init__.pyi  compiler.py  modules.py  utils.py  value.py  value_type.py
workflowpy/definitions/: action.py
workflowpy/magic/: types.pyi
workflowpy/models/: shortcuts.py
workflowpy/modules/: __init__.py  _workflowpy.py
workflowpy/modules/_workflowpy/magic/: custom.py
workflowpy/synthesizer/: synthesizer.py
